--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,5 +1,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<!-- index.js 추가 -->
+<!-- src/main/resources/static이 기본 루트설정값 -->
+<script src="/js/app/index.js"></script>
+
 </body>
 </html>
